--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ESO Builder</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8XMW0LKHMS"></script>
+    <script>
+      if (window.location.hostname !== 'localhost') {
+        console.log('gtag');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8XMW0LKHMS');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
